# DSGE-Models

./: .gitignore  README.md  pyproject.toml  run.sh
.mplconfig/: fontlist-v390.json
model-guide/: NK_MODEL.md  RAMSEY_KOOPMANS_MODEL.md  TOY_NK_MODEL.md
result/nk_model/20260226_030258/: timeseries.xlsx
result/nk_model/20260226_030406/: timeseries.xlsx
result/toy_nk/20260226_024418/direct_inverse/: F.csv  G.csv  summary.json  trajectory.csv
result/toy_nk/20260226_024418/least_squares/: F.csv  G.csv  summary.json  trajectory.csv
result/toy_nk/20260226_024418/linear_solve/: F.csv  G.csv  summary.json  trajectory.csv
run/: run_nk_model.sh  run_ramsey_koopmans.sh
src/dsge/: __init__.py
src/dsge/configs/: nk_model.yaml  ramsey_koopmans.yaml  toy_nk.yaml
src/dsge/core/: interfaces.py  simulation.py
src/dsge/experiments/: run_model.py  run_nk_model.py  run_toy_model.py
src/dsge/models/: nk_model.py  ramsey_koopmans.py  registry.py  toy_nk.py
src/dsge/solvers/: direct_inverse.py  least_squares.py  linear_solve.py  registry.py
tests/: test_solver_consistency.py
